Re-Updated API Module to Fix Final Test Failures